--- a/style.css
+++ b/style.css
@@ -166,3 +166,37 @@ footer {
   color: #fff;
 }
 
+/* PC LAYOUT */
+@media (min-width: 1200px){
+  body {
+    display: grid;
+    grid-template-areas: 
+    'header header'
+    'main aside'
+    'footer footer';
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 4.5rem 1fr 4rem;
+    gap: 2.5rem 2rem;
+  }
+
+  .container {
+    width: 100%;
+    padding: 0 2rem;
+  }
+
+  header {
+    grid-area: header;
+  }
+
+  main {
+    grid-area: main;
+  }
+
+  aside {
+    grid-area: aside;
+  }
+
+  footer {
+    grid-area: footer;
+  }
+}
